Fixed nav bar collapse issue and the login button at mobile sizes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -248,6 +248,10 @@ hr{
   .innerFbButton {
     display: block !important;
   }
+  
+  .outerFbButton {
+    text-align: left;
+  }
 }
 
 .plantView {
